# MooDB

./: .gitignore  Cargo.toml  README.md
db/moo/: test.json
examples/simple/: Cargo.toml
examples/simple/db/moo/: crypto_accounts.json
examples/simple/src/: main.rs
src/: core.rs  debug.rs  lib.rs  types.rs
src/utils/: debug.rs
test/: data.json  main.mjs
