[package]
name = "moodb"
version = "0.1.0"
edition = "2021"
authors = ["thatguyjamal"]
description = "A simple key-value file based persistent database for Rust"
readme = "./README.md"
repository = "https://github.com/ThatGuyJamal/MooDB"
license-file = "./LICENSE"
keywords = ["database", "key-value", "persistent", "file", "json"]
# documentation = "https://docs.rs/moodb"

exclude = [
    "examples/**/*",
    "tests/**/*",
    ".github/*",
    ".vscode/**/*",
    "db/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"